test/files/neg/yimports-custom/C_2.scala
//> using options -Yimports:hello.world.minidef

class C {
  val v: Numb = Magic
  def greet() = println("hello, world!")
}
